--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -111,6 +111,9 @@ jobs:
           # if-no-files-found: error
           retention-days: 7
           path: ${{ env.NuGetDirectory }}/*.nupkg
+        if: |
+          success()
+          && matrix.version.target == 'net6.0' && matrix.os == 'windows-latest'
       - name: Publish NuGet packages (GH/always)
         shell: pwsh
         run: |
