ci: workaround NuGet dupe bug
https://github.com/NuGet/NuGetGallery/issues/9343
Signed-off-by: Andrew Berezovskyi <andriib@kth.se>

--- a/OSLC4Net_SDK/Directory.Build.props
+++ b/OSLC4Net_SDK/Directory.Build.props
@@ -13,7 +13,7 @@
     <RepositoryUrl>https://github.com/OSLC/oslc4net/</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="$(SolutionDir)\..\README.md" Pack="true" PackagePath="\" />
+    <None Include="$(SolutionDir)\..\README.md" Pack="true" PackagePath="README.md" />
   </ItemGroup>
   <PropertyGroup>
     <LangVersion>10</LangVersion>
