--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         os: [ubuntu-latest, windows-latest]
         version:
           [
-            { setup: "6.x", target: "net6.0" },
+            # { setup: "6.x", target: "net6.0" },
             { setup: "8.x", target: "net8.0" },
             { setup: "9.x", target: "net9.0" },
           ]
@@ -95,7 +95,7 @@ jobs:
           dotnet pack -c Release --version-suffix "ts.$(Get-Date -Format 'yyyyMMddHHmm')" -o ${{ env.NuGetDirectory }}
         if: |
           success() && github.ref == 'refs/heads/main'
-          && matrix.version.target == 'net6.0' && matrix.os == 'windows-latest'
+          && matrix.version.target == 'net8.0' && matrix.os == 'windows-latest'
           && ! (github.event_name == 'release' || inputs.release )
       - name: Pack NuGet packages (release)
         shell: pwsh
@@ -103,7 +103,7 @@ jobs:
           dotnet pack -c Release -o ${{ env.NuGetDirectory }}
         if: |
           success()
-          && matrix.version.target == 'net6.0' && matrix.os == 'windows-latest'
+          && matrix.version.target == 'net8.0' && matrix.os == 'windows-latest'
           && (github.event_name == 'release' || inputs.release )
       - uses: actions/upload-artifact@v4
         with:
@@ -113,7 +113,7 @@ jobs:
           path: "${{ env.NuGetDirectory }}/*.nupkg"
         if: |
           success()
-          && matrix.version.target == 'net6.0' && matrix.os == 'windows-latest'
+          && matrix.version.target == 'net8.0' && matrix.os == 'windows-latest'
       - name: Publish NuGet packages (GH/always)
         shell: pwsh
         run: |
@@ -122,7 +122,7 @@ jobs:
           }
         if: |
           success()
-          && matrix.version.target == 'net6.0' && matrix.os == 'windows-latest'
+          && matrix.version.target == 'net8.0' && matrix.os == 'windows-latest'
           && (github.ref == 'refs/heads/main' || github.event_name == 'release' || inputs.release)
       - name: Publish NuGet packages (NuGet.org/release)
         shell: pwsh
@@ -132,5 +132,5 @@ jobs:
           }
         if: |
           success()
-          && matrix.version.target == 'net6.0' && matrix.os == 'windows-latest'
+          && matrix.version.target == 'net8.0' && matrix.os == 'windows-latest'
           && (github.event_name == 'release' || inputs.release )
