build: use common build & package settings
Signed-off-by: Andrew Berezovskyi <andriib@kth.se>

--- a/OSLC4Net_SDK/Directory.Build.props
+++ b/OSLC4Net_SDK/Directory.Build.props
@@ -20,5 +20,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
+    <!-- TODO: add 'nullable' -->
+    <!-- <WarningsAsErrors>NU1903</WarningsAsErrors> -->
   </PropertyGroup>
 </Project>
