build: NU1903 fails the build
Signed-off-by: Andrew Berezovskyi <andriib@kth.se>

--- a/OSLC4Net_SDK/Directory.Build.props
+++ b/OSLC4Net_SDK/Directory.Build.props
@@ -21,6 +21,6 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
     <!-- TODO: add 'nullable' -->
-    <!-- <WarningsAsErrors>NU1903</WarningsAsErrors> -->
+    <WarningsAsErrors>NU1903</WarningsAsErrors>
   </PropertyGroup>
 </Project>
