--- a/OSLC4Net_SDK/Directory.Packages.props
+++ b/OSLC4Net_SDK/Directory.Packages.props
@@ -10,19 +10,18 @@
   <ItemGroup>
     <!-- For removal -->
     <PackageVersion Include="log4net" Version="2.0.17" />
-    <!-- TODO: do we really need it here? -->
-    <PackageVersion Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageVersion Include="NuGet.Build.Tasks.Pack" Version="6.11.1" />
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageVersion Include="System.Json" Version="4.7.1" /><!-- JsonProvider -->
+    <PackageVersion Include="System.Json" Version="4.7.1" />
 
+    <!-- depedencyManagement / convergence -->
+    <PackageVersion Include="System.Net.Http" Version="4.3.4" />
+    <PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1" />
     <!-- Main deps -->
     <PackageVersion Include="dotNetRdf.Core" Version="3.3.0" />
     <PackageVersion Include="Antlr3.Runtime" Version="3.5.1" />
-    <PackageVersion Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
-    <PackageVersion Include="System.Data.DataSetExtensions" Version="4.5.0" />
-    <PackageVersion Include="System.Configuration.ConfigurationManager" Version="8.0.1" />
-
+    <!-- conneg support &c for System.Net.Http -->
+    <PackageVersion Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
     <!-- Test deps -->
     <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
@@ -33,7 +32,6 @@
     <PackageVersion Include="coverlet.collector" Version="6.0.2" />
     <PackageVersion Include="MSTest.TestFramework" Version="$(MSTestVersion)" />
     <PackageVersion Include="MSTest.TestAdapter" Version="$(MSTestVersion)" />
-
     <!-- Examples only -->
     <PackageVersion Include="dotNetRdf" Version="3.3.0" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
