--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -9,6 +9,7 @@ jobs:
   build:
     name: Build and analyze
     runs-on: windows-latest
+    if: ${{ !contains(github.event.pull_request.labels.*.name, 'ci:nolint') && !contains(github.event.pull_request.labels.*.name, 'dependencies') }}
     steps:
       - name: Set up JDK 17
         uses: actions/setup-java@v4
