--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -16,7 +16,10 @@ jobs:
   build:
     name: Build and analyze
     runs-on: windows-latest
-    if: ${{ !contains(github.event.pull_request.labels.*.name, 'ci:nolint') && !contains(github.event.pull_request.labels.*.name, 'dependencies') }}
+    if: |
+      ${{ !contains(github.event.pull_request.labels.*.name, 'ci:nolint') 
+      && !contains(github.event.pull_request.labels.*.name, 'dependencies')
+      && !github.event.pull_request.head.repo.fork }}
     steps:
       - name: Set up JDK 17
         uses: actions/setup-java@8df1039502a15bceb9433410b1a100fbe190c53b # v4.5.0
