--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -49,8 +49,9 @@ jobs:
         with:
           fetch-depth: 2
       # https://learn.microsoft.com/en-us/dotnet/devops/dotnet-secure-github-action
-      - run: git checkout HEAD^2
-        if: ${{ github.event_name == 'pull_request' }}
+      # git checkout HEAD^2 is no longer necessary. Please remove this step as Code Scanning recommends analyzing the merge commit for best results.
+      # - run: git checkout HEAD^2
+      #   if: ${{ github.event_name == 'pull_request' }}
 
       # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
