--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -49,14 +49,14 @@ jobs:
         with:
           fetch-depth: 2
       # https://learn.microsoft.com/en-us/dotnet/devops/dotnet-secure-github-action
-      - run: git checkout HEAD^2
-        if: ${{ github.event_name == 'pull_request' }}
+      # git checkout HEAD^2 is no longer necessary. Please remove this step as Code Scanning recommends analyzing the merge commit for best results.
+      # - run: git checkout HEAD^2
+      #   if: ${{ github.event_name == 'pull_request' }}
 
       # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
         uses: github/codeql-action/init@ea9e4e37992a54ee68a9622e985e60c8e8f12d9f # v3.27.4
         with:
-          working-directory: ./OSLC4Net_SDK
           languages: ${{ matrix.language }}
           # If you wish to specify custom queries, you can do so here or in a config file.
           # By default, queries listed here will override any specified in a config file.
@@ -82,5 +82,4 @@ jobs:
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@ea9e4e37992a54ee68a9622e985e60c8e8f12d9f # v3.27.4
         with:
-          working-directory: ./OSLC4Net_SDK
           category: "/language:${{matrix.language}}"
