--- a/OSLC4Net_SDK/Directory.Build.props
+++ b/OSLC4Net_SDK/Directory.Build.props
@@ -1,17 +1,34 @@
 <Project>
+  <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+  </PropertyGroup>
+
   <PropertyGroup>
     <Version Condition="'$(RELEASE_VERSION)' != ''">$(RELEASE_VERSION)</Version>
     <VersionPrefix Condition="'$(RELEASE_VERSION)' == ''">999.9.9</VersionPrefix>
     <VersionSuffix Condition="'$(RELEASE_VERSION)' == ''">ts.$([System.DateTime]::UtcNow.ToString(`yyyyMMddHHmm`))</VersionSuffix>
     <PackageLicenseExpression>EPL-1.0</PackageLicenseExpression>
     <Authors>Andrii Berezovskyi and OSLC4Net contributors</Authors>
+    <Copyright>© Andrii Berezovskyi and OSLC4Net contributors 2023; © IBM 2012</Copyright>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageProjectUrl>https://github.com/OSLC/oslc4net/</PackageProjectUrl>
     <RepositoryUrl>https://github.com/OSLC/oslc4net/</RepositoryUrl>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <DeterministicSourcePaths>true</DeterministicSourcePaths>
+  </PropertyGroup>
+
+
   <ItemGroup>
+    <SourceRoot Include="$(MSBuildThisFileDirectory)/"/>
     <None Include="$(SolutionDir)\..\README.md" Pack="true" PackagePath="README.md"/>
   </ItemGroup>
+
   <PropertyGroup>
     <LangVersion>12</LangVersion>
     <Nullable>enable</Nullable>
