--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,7 @@ jobs:
             # { setup: "6.x", target: "net6.0" },
             { setup: "8.x", target: "net8.0" },
             { setup: "9.x", target: "net9.0" },
+            { setup: "10.x", target: "net10.0" },
           ]
     runs-on: ${{ matrix.os }}
     defaults:
