--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,12 @@ updates:
     open-pull-requests-limit: 99
     schedule:
       interval: "daily"
+    groups:
+      test-deps:
+        patterns:
+          - "xunit*"
+          - "MSTest.*"
+          - "Microsoft.NET.Test.*"
   - package-ecosystem: "github-actions" # See documentation for possible values
     directory: "/" # Location of package manifests
     open-pull-requests-limit: 99
