--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,8 +44,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-24.04, windows-latest]
-        version:
+        os: [ubuntu-24.04, ubuntu-24.04-arm, windows-latest]
+        version: 
           [
             # { setup: "6.x", target: "net6.0" },
             { setup: "8.x", target: "net8.0" },
